# stoken

./: .gitignore  .travis.yml  CHANGES  Makefile.am  README  README.md  TODO  acinclude.m4  autogen.sh  build-debian.sh  configure.ac  libstoken.map  release.sh  stoken-gui-small.desktop  stoken-gui.1  stoken-gui.desktop  stoken.1  stoken.pc.in  win32deps.pl
.github/workflows/: c-cpp.yml
debian/: changelog  control  copyright  libstoken-dev.install  libstoken1.install  libstoken1.symbols  stoken.install  watch
debian/upstream/: signing-key.asc
docker/: .bashrc  Dockerfile  Makefile
docker/scripts/: build.sh  run.sh
example/: .gitignore
examples/: libstoken-test.c  qr-encode.sh  sdtid-test.pl
gui/: password-dialog.ui  pin-dialog.ui  stoken-gui.desktop  tokencode-detail.ui  tokencode-small.ui
java/: README  build.xml
java/src/com/example/: LibTest.java
java/src/org/stoken/: LibStoken.java
m4/: as-compiler-flag.m4
misc/: Brewfile-travis  build-debian.sh  build-one.sh
ppa/: control  copyright  libstoken1.symbols  rules  stoken.examples
src/: cli.c  common.c  common.h  compat.c  gui.c  jni.c  library.c  sdtid.c  sdtid.h  securid.c  securid.h  stc-nettle.c  stc-tomcrypt.c  stoken-internal.h  stoken.h  strcasestr.c
tests/: devid-passwd.sdtid  export  export-android-v2.pipe  export-android-v2.ref  export-iphone-password.pipe  export-iphone-password.ref  export-read-v3.pipe  export-read-v3.ref  export-sdtid-devid-password.pipe  export-sdtid-devid-password.ref  export-v3-sdtid.pipe  export-v3-sdtid.ref  fixed-secret.xml  mac-align.pipe  mac-align.ref  mac-align.sdtid  pipe-wrapper.sh  sign  sign.cmp  template.xml  tokencode  tokencode-sdtid.pipe  tokencode-sdtid.ref  tokencode-v2.pipe  tokencode-v2.ref  tokencode-v3.pipe  tokencode-v3.ref  tokencode-v4.pipe  tokencode-v4.ref
